// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkedPackagesMerger getMergedMarkedPackages should merge all markedPackages if one file does not contain markedPackages 1`] = `
[
  {
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
  {
    "color": "#FFFFFF",
    "path": "/root/nodeB",
  },
]
`;

exports[`MarkedPackagesMerger getMergedMarkedPackages should merge different markedPackages 1`] = `
[
  {
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
  {
    "color": "#FFFFFF",
    "path": "/root/nodeB",
  },
]
`;

exports[`MarkedPackagesMerger getMergedMarkedPackages should merge markedPackage-attributes for the same markedPackage paths 1`] = `
[
  {
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
]
`;

exports[`MarkedPackagesMerger getMergedMarkedPackages should overwrite duplicated markedPackage-attributes for the same markedPackage 1`] = `
[
  {
    "color": "#ABABAB",
    "path": "/root/nodeA",
  },
]
`;
